# copilot-builder-showcase

./: .gitignore  AGENTS.md  PRD.md  README.md  SECURITY.md  builder_dashboard.py  builder_panel.py  builder_showcase.py  builder_showcase_dashboard.py  bundle_reader.py  copilot_builder_panel.py  event_spec.py  hackathon_judge.py  hackathon_judge_dashboard.py  hackathon_launcher.py  install.ps1  install.sh  pyproject.toml  showcase_launcher.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
config/: event.example.json  rubric.json
docs/: index.html
skills/copilot-builder-panel/: SKILL.md
skills/copilot-builder-showcase/: SKILL.md
skills/hackathon-judge/: SKILL.md
tests/: test_builder_showcase.py  test_builder_showcase_dashboard.py  test_bundle_reader.py  test_copilot_builder_panel.py  test_event_spec.py  test_hackathon_judge.py  test_hackathon_judge_dashboard.py  test_hackathon_launcher.py  test_showcase_launcher.py
